User menu no longer messes up the rest of the page on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -65,4 +65,6 @@ body {
   border-radius: 7px;
   padding: 7px;
   background-color: rgb(20, 20, 20);
+  position: absolute;
+  right: 0;
 }
